--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "bugs": {
     "url": "https://github.com/dpellier/bem-comment/issues"
   },
-  "devDependencies": {
-    "mocha": "~1.16.2",
+  "dependencies": {
     "line-by-line": "~0.1.3",
     "cli": "~0.6.5"
+  },
+  "devDependencies": {
+    "mocha": "~1.16.2"
   }
 }
